Data type validation : Checked column types, detecting non-numeric entries in numeric columns, and flagged numeric values in categorical columns

--- a/DSPLGCW.ipynb
+++ b/DSPLGCW.ipynb
@@ -614,9 +614,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hV_Avs9o5OsO",
-        "outputId": "471ec28d-512b-4782-a51e-9439616dbd32"
+        "outputId": "fc1e2684-7a7e-4f6b-8f6b-9ada0c831a4d"
       },
-      "execution_count": 4,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
@@ -644,16 +644,16 @@
       "source": [
         "# Find rows where luxury_sales is NOT numeric\n",
         "non_numeric_rows = traindf[~traindf[\"luxury_sales\"].astype(str).str.replace('.', '', 1).str.isnumeric()]\n",
-        "print(non_numeric_rows[[\"luxury_sales\"]].drop_duplicates())  # Show unique problematic values"
+        "print(non_numeric_rows[[\"luxury_sales\"]].drop_duplicates())  # Show non numeric values"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sIUYb7eH1Iuy",
-        "outputId": "82ffab4d-d55c-498d-e172-471d7addbd39"
+        "outputId": "ef11ed45-5e80-4644-ea9e-24cb4d84c293"
       },
-      "execution_count": 5,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,9 +685,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h6OL902Y4nDe",
-        "outputId": "4b02e218-1d34-4992-b136-caf2a5f55848"
+        "outputId": "51f330e4-f681-40dd-b5b5-68d89df14061"
       },
-      "execution_count": 6,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,9 +717,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RzRLVHQw5gfU",
-        "outputId": "cffed1aa-07a9-4cae-8baf-f1c687b1f16f"
+        "outputId": "a3f59920-babc-47c2-c54c-50e9367607dd"
       },
-      "execution_count": 7,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,9 +745,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C_tcttq76Xwn",
-        "outputId": "3d05a13b-7670-407b-88ba-1fe1644db230"
+        "outputId": "fd46da7e-70f4-4427-8ea3-9a3fffed5147"
       },
-      "execution_count": 8,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -771,9 +771,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VI8jwIz37H4Z",
-        "outputId": "b8718a89-727d-422a-8eb5-f28847e8c785"
+        "outputId": "075419cd-4e37-4d56-8e59-2ca5eea0ab40"
       },
-      "execution_count": 9,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
@@ -798,9 +798,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8oTP8XuR7Ykf",
-        "outputId": "e1e5170b-41dc-48a1-bea6-a6c07da8c1fa"
+        "outputId": "63d9c782-6de0-421b-cba7-0e3f685e5720"
       },
-      "execution_count": 10,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
